--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/FindMyCareer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.35-bin.jar=G:\\Term 2\\Java Projects\\mysql-connector-java-5.1.35\\mysql-connector-java-5.1.35\\mysql-connector-java-5.1.35-bin.jar
+file.reference.rs2xml.jar=E:\\Term 2\\Java Projects\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.35-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.35-bin.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
